Fix left over tooltips, add feedback
SQUASHED: AUTO-COMMIT-doc-PX2018-project_2-presentation.css,AUTO-COMMIT-doc-RP2018-vivide-js-presentation-presentation-2018-07-03-scripts.md,AUTO-COMMIT-doc-RP2018-vivide-js-presentation-presentation-2018-07-03.md,AUTO-COMMIT-doc-RP2018-vivide-js-presentation-presentation-utils.js,AUTO-COMMIT-src-client-vivide-components-vivide-tree-widget.js,

--- a/doc/PX2018/project_2/presentation.css
+++ b/doc/PX2018/project_2/presentation.css
@@ -177,6 +177,11 @@
   top: 130px;
 }
 
+.lively-slide.ratio-16-9 .notes li {
+  font-size: 22pt;
+  line-height: 1.5em;
+}
+
 .lively-slide .notes-big li {
   font-size: 24pt;
   line-height: 1.5em;
